# Module_08_h

ex0/: construct.py
ex1/: loading.py  pyproject.toml  requirements.txt
ex2/: .env.example  .env.swp  .gitignore  .oracle.py.swp  .oracle_t.py.swp  oracle.py  oracle_t.py
test/: test.py
