[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "irdzhupy"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas (<3.0)",
    "numpy (<2.3)",
    "matplotlib (<3.10)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
